<resources>
    <string name="app_name">Blackjack</string>
    <string name="sign">BLACKJACK</string>
    <string name="split">SPLIT</string>
    <string name="hit">HIT</string>
    <string name="stay">STAY</string>
    <string name="double_down">DOUBLE DOWN</string>
    <string name="your_bet">BET:</string>
    <string name="play">PLAY</string>
    <string name="created">Created by AnneMarie Caballero</string>
    <string name="credit">Card images created by Alex Winstanley and Peter Murphy Cover image sourced from Google Images</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
